--- a/ChildrenApp/app/src/main/res/layout/ui_fix_userinfo.xml
+++ b/ChildrenApp/app/src/main/res/layout/ui_fix_userinfo.xml
@@ -43,8 +43,10 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:gravity="center">
-
+s
             <TextView
+                android:layout_marginRight="5dp"
+                android:layout_gravity="center"
                 android:id="@+id/btn_yes_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
