--- a/ChildrenApp/app/src/main/res/values/attrs.xml
+++ b/ChildrenApp/app/src/main/res/values/attrs.xml
@@ -11,4 +11,18 @@
         <attr name="headerHeight" format="dimension" />
         <attr name="headerVisibleHeight" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="LoadingLayout">
+        <attr name="loadingView" format="reference" />
+        <attr name="errorView" format="reference" />
+        <attr name="retryView" format="reference" />
+        <attr name="emptyView" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="RefreshView">
+        <attr name="type" format="enum">
+            <enum name="sun" value="0" />
+            <enum name="jet" value="1" />
+        </attr>
+    </declare-styleable>
 </resources>
