--- a/ChildrenApp/app/src/main/res/layout/ui_item_teachers.xml
+++ b/ChildrenApp/app/src/main/res/layout/ui_item_teachers.xml
@@ -11,7 +11,8 @@
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/image_head" />
+        android:src="@drawable/image_head"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,4 +21,5 @@
         android:layout_gravity="center_horizontal"
         android:text="测试老师"
         android:textSize="15sp"/>
+
 </LinearLayout>
